--- a/gallery/gallery/files/templates/base.html
+++ b/gallery/gallery/files/templates/base.html
@@ -3,7 +3,8 @@
     <head>
 	    <title> Gallery - {% block title %}{% endblock %}</title>
 		<style type="text/css">
-		    body { margin: 30px; font-family: sans-serif; background-image: url('/media/photos/sobaka.jpg');}
+		    body { margin: 30px; font-family: sans-serif; background-image: url('/media/photos/sobaka.jpg');
+            background-repeat: no-repeat;  background-size: 100%;}
             th {width: 100px; text-align: left;}
             p {font-size: 15px;}
 			h1 {background: #FFDAB9; padding: 20 px; }
